# General-Burgers-Solver

./: .gitignore  Burgers.cpp  Burgers.h  CMakeLists.txt  Model.cpp  Model.h  MyMPI.cpp  MyMPI.h  a.out  burgers  burgers.cpp  helper.h  main.cpp
includes/: cblas.h
includes/blaze/: Math.h
includes/blaze/config/: BLAS.h  CacheSize.h  Optimizations.h  Restrict.h  StorageOrder.h  TransposeFlag.h
includes/blaze/math/: DenseVector.h  Shims.h
